so it seems the mac scrollbar issue is fixed by setting the scrollBarWidth if user is using lion and scrollbar is show only when scrolling

--- a/css/table-base.less
+++ b/css/table-base.less
@@ -4,21 +4,6 @@
   margin: 50px auto;
 }
 
-.lion.tables-container {
-  .body-container, .scroll-container {
-    // http://jsfiddle.net/tTyj4/37/
-    &::-webkit-scrollbar {
-      -webkit-appearance: none;
-      width: 8px;
-    }
-    &::-webkit-scrollbar-thumb {
-      border-radius: 4px;
-      background-color: rgba(0,0,0,.5);
-      -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
-    }
-  }
-}
-
 .tables-container{
   height: 100%;
   width: 100%;
